http/chat/chat.css
.user, .user:first-child { margin-top: 6px }
.user span { float: right }
.rem { opacity: 0.5 }
#content {
	height: 0;
	display: flex;
	flex-direction: column;
}
#chat-div {
	flex-grow: 1;
	display: flex;
	align-items: stretch;
}
#chat { flex: 1 1 0 }
#changetypeStat:empty { color: rgba(0, 0, 0, 0) }
#changetypeStat:not(:empty) {
	transition: color 0.2s 0.2s;
	color: #000;
}
#changetypeStat.saved {
	transition: opacity 2s;
	opacity: 0;
}
#searchbox {
	width: 100%;
	font-size: 1em;
}
#roomlist {
	background: #4af;
	z-index: 1;
}
#roomlist span {
	cursor: pointer;
	display: block;
	margin: 0;
	padding: 2px 6px;
	border: 1px solid #000;
	border-top: none;
}
#roomlist .selected { background: #6df }
#results:empty::after {
	content: '(no results)';
	color: #444;
}
#chat, #aside { overflow-x: hidden }
#chat-div { height: calc(100% - 120px) }
textarea {
	height: 96px;
	flex-shrink: 0;
}
#chat .comment:hover { outline: 1px dotted #000 }
.ctrls { border: 1px solid #aaa }
#stars {
	list-style-type: none;
	padding: 0;
}
#stars li { margin: 4px 0 }
#editform { margin: 0 }
#users a { text-decoration: none }
#users li.inactive {
	opacity: 0.3;
	transition: opacity 60s, color 0.2s;
}
#users li { transition: color 0.2s }
.writing { color: green }
#users a:visited:not(:hover) { color: #000 }
#users:empty::after { content: 'No users in room' }
#stars:empty::after { content: 'No multistarred messages' }
.comment:not(:hover) .ctrls:not(:hover) { z-index: -1 }
#aside {
	float: right;
	padding-top: 4px;
	margin-left: 6px;
}
@media (max-width: 699px) {
	#aside { display: none }
}
@media (min-width: 700px) {
	#aside { width: calc(17% + 96px) }
}
.mention {
	background: #faa;
	border-radius: 4px;
}
.editing, .deleted { position: relative }
.editing::before, .deleted::before {
	content: '';
	position: absolute;
	top: 0; right: 0; bottom: 0; left: 0;
}
.deleted::before { background: rgba(255, 128, 128, 0.95) }
.editing::before { background: rgba(48, 168, 255, 0.4) }
#pingsug {
	position: absolute;
	margin-top: -18px;
}
#pingsug span {
	background: #ffa;
	padding: 2px;
	margin: 0 2px;
}
.connection-error {
	position: absolute;
	z-index: 1;
}
#chat { background: #ddd }

